--- a/python/example/fetpapi.ipynb
+++ b/python/example/fetpapi.ipynb
@@ -4267,14 +4267,12 @@
    ],
    "source": [
     "dataspace = all_dataspaces.front()\n",
-    "print(\"Working on dataspace \" + dataspace.uri);\n",
-    "# List resources of this ETP dataspace\n",
     "etp_context = fetpapi.ContextInfo()\n",
     "etp_context.uri = dataspace.uri\n",
     "etp_context.depth = 1\n",
     "all_resources = client_session.getResources(etp_context, fetpapi.ContextScopeKind__self);\n",
     "if all_resources.empty() :\n",
-    "    print(\"There is no resource on this dataspace.\")\n",
+    "    print(\"There is no resource in dataspace \" + dataspace.uri)\n",
     "for resource in all_resources:\n",
     "    print(resource.uri)"
    ]
