Add a "Put Horizon" jupyter notebook

--- a/python/example/fetpapi.ipynb
+++ b/python/example/fetpapi.ipynb
@@ -140,7 +140,7 @@
    "id": "abbc43cb",
    "metadata": {},
    "source": [
-    "Let's list the available datspaces"
+    "Let's list the available dataspaces"
    ]
   },
   {
