--- a/python/example/PutHorizon.ipynb
+++ b/python/example/PutHorizon.ipynb
@@ -261,12 +261,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "repo.setUriSource(dataspace.uri)\n",
     "dataobjects = fetpapi.MapStringDataObject()\n",
     "allUuids = repo.getUuids()\n",
     "for i, uuid in enumerate(allUuids):\n",
-    "    dataObj = repo.getDataObjectByUuid(uuid)\n",
-    "    dataObj.setUriSource(dataspace.uri)\n",
-    "    dataobjects[str(i)] = fetpapi.buildEtpDataObjectFromEnergisticsObject(dataObj)\n",
+    "    dataobjects[str(i)] = fetpapi.buildEtpDataObjectFromEnergisticsObject(repo, uuid)\n",
     "client_session.putDataObjects(dataobjects)\n",
     "# Finally commit the tansaction now that we have put everything we wanted\n",
     "client_session.commitTransaction()"
@@ -293,7 +292,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
