Clean Jupyter Notebooks
Also fix regression of 6e48e721adb4b6066b229bca30e96ea662e06dad

--- a/python/example/PutHorizon.ipynb
+++ b/python/example/PutHorizon.ipynb
@@ -13,7 +13,7 @@
    "id": "a16222c5-064e-431d-9dae-d3d6c535a6b9",
    "metadata": {},
    "source": [
-    "Once FETPAPI wheel installed, you need to first import FESAPI (required dependency) and then fetpapi it in order to be able to call its API."
+    "Once FETPAPI wheel installed, you need to first import FESAPI (required dependency) and then fetpapi in order to be able to call its API."
    ]
   },
   {
@@ -176,7 +176,7 @@
     "if (len(successKeys) == 1):\n",
     "    print(\"Dataspace has been put\")\n",
     "else:\n",
-    "    print(\"Error when putting dataspace\")"
+    "    print(\"Error when putting dataspace. Already present?\")"
    ]
   },
   {
@@ -203,7 +203,7 @@
     "                                          fesapi.eml20__LengthUom_m, \"Unknown\",\n",
     "                                          False)\n",
     "repo.setDefaultCrs(local_3d_crs)\n",
-    "repo.setHdfProxyFactory(fetpapi.FesapiHdfProxyFactory(client_session));\n",
+    "repo.setHdfProxyFactory(fetpapi.FesapiHdfProxyFactory(client_session))\n",
     "hdf_proxy = repo.createHdfProxy(\"f8160b8f-0517-4c55-ab6e-ed8bcdc87111\", \"Hdf Proxy\",\n",
     "                                \".\", \"fake.h5\",\n",
     "                                fesapi.DataObjectRepository.openingMode_OVERWRITE)\n",
@@ -233,7 +233,9 @@
     "# Create first a transaction in order to be able to rollback if necessary and to easier resolve dependencies to put\n",
     "dataspacesToLock = fetpapi.StringVector()\n",
     "dataspacesToLock.append(dataspace.uri)\n",
-    "client_session.startTransaction(dataspacesToLock)\n",
+    "transactionFailure = client_session.startTransaction(dataspacesToLock)\n",
+    "if (transactionFailure):\n",
+    "    print (transactionFailure)\n",
     "# And let's set a 2x3 geometry on this 2d grid where the Z values equal hundred times the node index.\n",
     "# The first (aka I) axis of this 2d grid is aligned on X and the second (aka J) axis of this 2d grid is aligned on Y.\n",
     "# The spacing on the first axis between two node is 25m and the spacing on the second axis between two node is 50m\n",
@@ -266,9 +268,13 @@
     "allUuids = repo.getUuids()\n",
     "for i, uuid in enumerate(allUuids):\n",
     "    dataobjects[str(i)] = fetpapi.buildEtpDataObjectFromEnergisticsObject(repo, uuid)\n",
-    "client_session.putDataObjects(dataobjects)\n",
-    "# Finally commit the tansaction now that we have put everything we wanted\n",
-    "client_session.commitTransaction()"
+    "successKeys = client_session.putDataObjects(dataobjects)\n",
+    "#for successKey in successKeys:\n",
+    "#    print(successKey)\n",
+    "# Finally commit the transaction now that we have put everything we wanted\n",
+    "transactionFailure = client_session.commitTransaction()\n",
+    "if (transactionFailure):\n",
+    "    print (transactionFailure)"
    ]
   },
   {
@@ -286,7 +292,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_session.close();"
+    "repo.clear()\n",
+    "client_session.close()"
    ]
   }
  ],
