--- a/python/example/fetpapi.ipynb
+++ b/python/example/fetpapi.ipynb
@@ -13,7 +13,7 @@
    "id": "a16222c5-064e-431d-9dae-d3d6c535a6b9",
    "metadata": {},
    "source": [
-    "Once FETPAPI wheel installed, you need to first import FESAPI (required dependency) and then fetpapi it in order to be able to call its API."
+    "Once FETPAPI wheel installed, you need to first import FESAPI (required dependency) and then fetpapi in order to be able to call its API."
    ]
   },
   {
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_session.close();"
+    "client_session.close()"
    ]
   }
  ],
