Prefer IP4 than IP6 when both are available

--- a/python/example/fetpapi.ipynb
+++ b/python/example/fetpapi.ipynb
@@ -131,6 +131,8 @@
     "    sleep(0.25)\t\n",
     "if client_session.isEtpSessionClosed():\n",
     "    print(\"The ETP session could not be established in 5 seconds.\")\n",
+    "    if not etp_server_url.endswith(\"/\"):\n",
+    "        print(\"You may try adding an ending slash to your ETP server URL.\")\n",
     "else:\n",
     "    print(\"Now connected to ETP Server\")"
    ]
