Adopting latest Beast classes (tcp_stream and asio::ssl::stream)
Store the identifier/UUID of the session
Clean sending queue at disconnection time
Update the Jupyter notebook  to put a dataspace with ACLs and LegalTags

--- a/python/example/PutHorizon.ipynb
+++ b/python/example/PutHorizon.ipynb
@@ -155,18 +155,26 @@
     "dataspace.uri = \"eml:///dataspace('\" + dataspace.path + \"')\"\n",
     "dataspace.customData = fetpapi.MapStringDataValue()\n",
     "dataValue = fetpapi.DataValue()\n",
-    "aos = fetpapi.ArrayOfString\n",
+    "aos = fetpapi.ArrayOfString()\n",
     "dataValue.item = fetpapi.DataValueitem_t()\n",
-    "aos.values = [\"data.default.viewers@osdu.example.com\"]\n",
+    "tmp = fetpapi.StringVector()\n",
+    "tmp.push_back(\"data.default.viewers@osdu.example.com\")\n",
+    "aos.values = tmp\n",
     "dataValue.item.set_ArrayOfString(aos)\n",
     "dataspace.customData[\"viewers\"] = dataValue\n",
-    "aos.values = [\"data.default.owners@osdu.example.com\"]\n",
+    "tmp.clear()\n",
+    "tmp.push_back(\"data.default.owners@osdu.example.com\")\n",
+    "aos.values = tmp\n",
     "dataValue.item.set_ArrayOfString(aos)\n",
     "dataspace.customData[\"owners\"] = dataValue\n",
-    "aos.values = [\"osdu-public-usa-dataset\"]\n",
+    "tmp.clear()\n",
+    "tmp.push_back(\"osdu-public-usa-dataset\")\n",
+    "aos.values = tmp\n",
     "dataValue.item.set_ArrayOfString(aos)\n",
     "dataspace.customData[\"legaltags\"] = dataValue\n",
-    "aos.values = [\"US\"]\n",
+    "tmp.clear()\n",
+    "tmp.push_back(\"US\")\n",
+    "aos.values = tmp\n",
     "dataValue.item.set_ArrayOfString(aos)\n",
     "dataspace.customData[\"otherRelevantDataCountries\"] = dataValue"
    ]
