[Python] Cast SWIG arrays when using them as parameters

--- a/python/example/PutHorizon.ipynb
+++ b/python/example/PutHorizon.ipynb
@@ -266,7 +266,7 @@
     "resqml_points = fesapi.DoubleArray(6)\n",
     "for i in range(6):\n",
     "    resqml_points.setitem(i, i*100)\n",
-    "horizon_grid_2d_representation.setGeometryAsArray2dOfExplicitZ(resqml_points, 2, 3, hdf_proxy,\n",
+    "horizon_grid_2d_representation.setGeometryAsArray2dOfExplicitZ(resqml_points.cast(), 2, 3, hdf_proxy,\n",
     "                                                                0.0, 0.0, 0.0,\n",
     "                                                               1.0, 0.0, 0.0, 25.0,\n",
     "                                                               0.0, 1.0, 0.0, 50.0)"
